# ChatBot_BW

./: .dockerignore  Dockerfile  bot.py  create_admin.py  database.py  docker-compose-db.yaml  docker-compose.yaml  pyproject.toml  run.sh  settings.py
